2001-09-03 17:19 GMT Dave Pearson <davep@davep.org>
  * source/rtl/Makefile
    * Added persist.org to PRG_SOURCES.
	
2001-09-03 16:56 GMT Dave Pearson <davep@davep.org>
  * source/rtl/isprint.c
    * Added missing comment close.

2001-09-03 11:30 GMT+1 Antonio Linares <alinares@fivetech.com>
  + harbour/contrib/hgf/gtk/makefile
  + harbour/contrib/hgf/gtk/creamenu.c
  + harbour/contrib/hgf/gtk/creawin.c
  + harbour/contrib/hgf/gtk/harbgtk.ch
  + harbour/contrib/hgf/gtk/shared.ch
  + harbour/contrib/hgf/gtk/harbgtk.h
  + harbour/contrib/hgf/gtk/menuitem.prg
  + harbour/contrib/hgf/gtk/tform.prg
  + harbour/contrib/hgf/gtk/tmenu.prg
    HGF GTK support by Marek Paliwoda

2001-09-02 21:30 GMT+1 Antonio Linares <alinares@fivetech.com>
  + harbour/source/rtl/persist.prg
    arrays support started

2001-09-02 19:30 GMT+1 Antonio Linares <alinares@fivetech.com>
  + harbour/source/rtl/persist.prg
    Class TPersistent to implement objects persistence

  + harbour/tests/testpers.prg
    objects persistence sample using Class TPersistent objects

  * harbour/makefile.bc
    persist.prg module added to Borland makefile.
    Notice that other makefiles should be updated

2001-09-02 18:32 GMT+1 Antonio Linares <alinares@fivetech.com>
  * harbour/source/vm/classes.c
    New function __ClsGetProperties() added. Syntax:
    __ClsGetProperties( <nClassHandle> ) --> <aPropertiesNames>

2001-09-02 13:10 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
    * source/rtl/isprint.c
      * Added code for win32 platform

2001-09-02 14:20 GMT+1 Antonio Linares <alinares@fivetech.com>
  * harbour/source/vm/classes.c
    Added BOOL bIsPersistent to the METHOD structure
    (notice that both datas and methods use that structure)

  * harbour/source/rtl/tclass.prg
    Added lPersistent parameter to AddMultiData, AddData and
    AddInline methods.

  * harbour/include/hboo.ch
    Added new defines HB_OO_DATA_PERSISTENT and HB_OO_MTHD_PERSISTENT

  * harbour/include/hbclass.ch