@@ -60,19 +60,19 @@
 
 CLASS TMenuItem
 
-   DATA   cCaption         // Specifies the text of the menu item
-   DATA   OnClick          // A character description of the method to invoke
-   DATA   nId              // Command value to send to the container form
-   DATA   lEnabled         // Specifies whether the menu item is enabled
+   DATA   cCaption            // Specifies the text of the menu item
+   DATA   OnClick             // A character description of the method to invoke
+   DATA   nId                 // Command value to send to the container form
+   DATA   lEnabled            // Specifies whether the menu item is enabled
 
-   DATA   aItems           // Contains the menu items in the submenu of the menu item
-   DATA   oParent          // Identifies the parent menu item of this menu item
-   DATA   nHandle          // The handle of _this_ menu item
+   DATA   aItems              // Contains the menu items in the submenu of the menu item
+   DATA   oParent             // Identifies the parent menu item of this menu item
+   DATA   nHandle             // The handle of submenu window (if there is any)
 
-   CLASSDATA nIdStart      // start value for commands value to assign to menu items
+   CLASSDATA nIdStart         // start value for commands value to assign to menu items
 
-   METHOD New( oOwner )    // Creates a new menu item
-   METHOD Add( oMenuItem ) // Adds a new drop down menu item
+   METHOD New( oOwner )       // Creates a new menu item
+   METHOD Add( oMenuItem )    // Adds a new drop down menu item
 
 ENDCLASS
 
@@ -85,20 +85,28 @@ METHOD New( oOwner ) CLASS TMenuItem
    ::nId      = ::nIdStart++
    ::lEnabled = .t.
    ::oParent  = oOwner
-   ::nHandle := WinCreateMenu( ::oParent:nHandle )
-   ::aItems  := {}
 
 return Self
 
 
 METHOD Add( oMenuItem ) CLASS TMenuItem
 
-   WinAddMenuItem( ::nHandle, oMenuItem:cCaption, MIT_END,;
+   DEFAULT ::aItems TO {}
+
+   if ::nHandle == nil
+      ::nHandle := WinCreateMenu( ::oParent:nHandle )
+      WinMakeSubMenuItem(::oParent:nHandle, ::nId, ::nHandle)
+
+   endif
+
+   WinAddMenuItem(::nHandle, oMenuItem:cCaption, MIT_END,;
                    nil, oMenuItem:nId, oMenuItem:lEnabled )
 
    AAdd( ::aItems, oMenuItem )
 
 return nil
+
+
 
 
 
