@@ -1,7 +1,12 @@
+2001-09-04 08:41 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
+   * contrib/hgf/os2pm/*
+     ! fixed menu items handling under OS/2 where you cannot change a MIS_TEXT into
+       a MIS_SUBMENU without first deleting MIS_TEXT and then inserting MIS_SUBMENU
+
 2001-09-03 17:19 GMT Dave Pearson <davep@davep.org>
   * source/rtl/Makefile
     * Added persist.org to PRG_SOURCES.
-	
+
 2001-09-03 16:56 GMT Dave Pearson <davep@davep.org>
   * source/rtl/isprint.c
     * Added missing comment close.
